--- a/merged-app/public/app/index.html
+++ b/merged-app/public/app/index.html
@@ -70,8 +70,6 @@
         const isLightMode = localStorage.getItem('lightMode') === 'true';
         document.body.classList.toggle('light-mode', isLightMode);
 
-        // If you're using a custom toggle-switch element on multiple pages,
-        // you may also want to ensure it's in the correct state:
         const toggleSwitch = document.querySelector('toggle-switch');
         if (toggleSwitch) {
             toggleSwitch.setAttribute('on', isLightMode);
@@ -85,8 +83,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 
-
-  <script type="module" crossorigin src="/assets/app-Ba89rpc0.js"></script>
+
+  <script type="module" crossorigin src="/assets/app-BuFqTnfJ.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/app-BUak3pWd.css">
 </head>
 <body>
@@ -105,7 +103,7 @@
         <div class="score-box">
             <h1>
                 <svg class="icon">
-                    <use href="/assets/sleep-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK.svg#icon-sleeping" />
+                    <use href="/assets/sleep-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK.svg#icon-sleeping" />
                 </svg>
                 Sleep Score
             </h1>
