links work but now index.html doesnt load with frontend

--- a/merged-app/index.html
+++ b/merged-app/index.html
@@ -84,7 +84,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Sixtyfour&family=Workbench&display=swap" rel="stylesheet">
 
 
-  <script type="module" crossorigin src="/assets/app-CBr9OTdq.js"></script>
+  <script type="module" crossorigin src="/assets/app-BnhJb63n.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/app-BUak3pWd.css">
 </head>
 <body>
@@ -103,7 +103,7 @@
         <div class="score-box">
             <h1>
                 <svg class="icon">
-                    <use href="/assets/sleep-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK.svg#icon-sleeping" />
+                    <use href="/assets/sleep-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK-CPtS16YK.svg#icon-sleeping" />
                 </svg>
                 Sleep Score
             </h1>
